--- a/static/main.css
+++ b/static/main.css
@@ -146,3 +146,18 @@ nav div a{
     justify-content: center;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 20px;
+    background-color: #d3e1e0;
+    padding: 10px;
+}
+  
+.grid-container > div {
+    background-color: rgba(255, 255, 255, 1);
+    border: 0px solid #285943;
+    text-align: center; 
+    font-size: 24px;
+    filter: drop-shadow(8px 4px 3px #656565)
+}
