made changes to community page

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,15 +27,18 @@
         </div>
     </nav>
 
-    <section class="fontcolor">
+    <main class="wrapper">
+        <section class="fontcolor">
         {% block body%}{% endblock %}
-    </section>
+        </section>
+        <div class="push"></div>
+    </main>
+    <p class="footer">© Robin Bath, Shiying Lin, Melissa Vuong</p>
+</body>
+
     
 
-    <div class="footer">
-        <p>© Robin Bath, Shiying Lin, Melissa Vuong</p>
-    </div>
-    
-    
-</body>
 </html>
+
+    
+        
