--- a/templates/community.html
+++ b/templates/community.html
@@ -4,5 +4,23 @@
 
 {% block body%}
 
+<div class="community">
+    <section>
+        <h2></h2>
+        <div></div>
+    </section>
+    
+    <section>
+        <h2></h2>
+        <div></div>
+    </section>
+    
+    <section>
+        <h2></h2>
+        <div></div>
+    </section>
+</div>
+
+
 
 {% endblock %}
