--- a/static/main.css
+++ b/static/main.css
@@ -2,10 +2,29 @@
 body{
     background-color: #d3e1e0;
     color: #f4faff;
-    padding-top: 70px;
+    min-height: 100%;
     font-family: "Lucida Console", "Courier New", monospace;
 }
-  
+
+html, body{
+    height: 100%;
+    margin: 0;
+}
+
+.wrapper{
+    min-height: 100%;
+    margin-bottom: -25px;
+}
+
+.footer, .push {
+    height: 25px;
+}
+
+main{
+    padding-top: 70px;
+    padding-bottom: 50px; 
+}
+
 .logo{
     font-size: 1.3em;
     display: flex;
@@ -44,6 +63,7 @@ nav{
     letter-spacing: 2px;
     top: 0;
     left: 0;
+    right: 0;
     width: 100%;
     box-sizing: border-box;
     padding: 4px 50px;
@@ -75,9 +95,11 @@ nav div a{
     box-sizing: border-box;
     width: 100%;
     font-family: "Lucida Console", "Courier New", monospace;
-    position: fixed;
-    padding-left: 10px;
     font-size: 1em;
+    right: 0;
+    padding: 10px;
+    display: flex;
+    align-items: center;
 }
 
 .welcome{
@@ -127,7 +149,7 @@ nav div a{
 }
 
 #home-bookcover{
-    padding: 20px;
+    padding-right: 20px;
 }
 
 .fontcolor{
@@ -160,4 +182,30 @@ nav div a{
     text-align: center; 
     font-size: 24px;
     filter: drop-shadow(8px 4px 3px #656565)
+}
+
+.centertext{
+    text-align: center;
+}
+
+.community{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.community section{
+    width: 70%;
+    background-color: #bbd3d1;
+    margin-top: 50px;
+    height: 300px;
+    border-radius: 10px;
+}
+
+.community section h2{
+    width: 100%;
+    height: 10%;
+    background-color: #9bb8b6;
+    margin-top:0px;
+    border-radius: 10px 10px 0px 0px;
 }
