--- a/templates/index.html
+++ b/templates/index.html
@@ -14,22 +14,24 @@
     <span class="line"></span>
 </div>
 
+<h2 style="font-size: 1.5em; margin-top:50px;" class="centertext">Recommendation of the day</h2>
+
 <main class="home-layout">
     <div style="<div style="width:1000px;height:1000px;overflow:hidden;" >
-        <img id="home-bookcover" src="{{url_for('static', filename='bookcover.jpg')}}" width="200px" height="auto" />
+        <img id="home-bookcover" src="{{url_for('static', filename='bookcover.jpg')}}" width="300px" height="auto" />
     </div>
 
 
     <!------------------from good reads-->
     <div class="recommendation-right">
-        <h2 style="font-size: 1.5em">Recommendation of the day</h2>
+        <!--<h2 style="font-size: 1.5em">Recommendation of the day</h2>-->
         <h3 style="font-size: 2.5em">The Great Gatsby</h3>
         <h4 style="font-size: 1.3em">by F.Scott Fitzgerald</h4>
         <p style="width: 50vw">The Great Gatsby, F. Scott Fitzgerald's third book, stands as the supreme achievement of his career. 
             This exemplary novel of the Jazz Age has been acclaimed by generations of readers. 
             The story is of the fabulously wealthy Jay Gatsby and his new love for the beautiful Daisy Buchanan, 
             of lavish parties on Long Island at a time when The New York Times noted "gin was the national drink 
-            and sex the national obsession," it is an exquisitely crafted tale of America in the 1920s.<br/>
+            and sex the national obsession," it is an exquisitely crafted tale of America in the 1920s.<br/><br/>
 
 
             The Great Gatsby is one of the great classics of twentieth-century literature.</p>
