--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,11 @@
 
     <main class="wrapper">
         <section class="fontcolor">
-        {% block body%}{% endblock %}
+        {% block body%}
+        
+        
+
+        {% endblock %}
         </section>
         <div class="push"></div>
     </main>
