made changes to the community page

--- a/static/main.css
+++ b/static/main.css
@@ -201,6 +201,8 @@ nav div a{
     margin-top: 50px;
     height: 300px;
     border-radius: 10px;
+    overflow: auto;
+    overflow-x: hidden;
 }
 
 .community section h2{
@@ -209,7 +211,12 @@ nav div a{
     background-color: #9bb8b6;
     margin-top:0px;
     border-radius: 10px 10px 0px 0px;
-}
+    color: #f4faff;
+    font-size: medium;
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
+} 
 
 .community div p{
     padding-left: 10px;
@@ -220,3 +227,24 @@ nav div a{
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+.btn{
+    background-color: #9bb8b6;
+    color: #f4faff;
+    font-size: medium;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 5px;
+}
+
+.btn:hover{
+    background-color: #f4faff;
+    color: #9bb8b6;
+    transition: ease-in 0.1s;
+}
+
+.reviewform p{
+    text-align: center;
+    margin-top: 0px;
+}
+
