--- a/templates/explore.html
+++ b/templates/explore.html
@@ -38,9 +38,9 @@
   <h1>Fiction Genres</h1>
   
   <div class="grid-container">
-    <div><a href="fantasy.html">Fantasy</a></div>
+    <div><a href="/fantasy">Fantasy</a></div>
     <div>Science Fiction</div>
-    <div><a href="historical.html">Historical Fiction</a></div>
+    <div><a href="/historical">Historical Fiction</a></div>
     <div>Crime/Mystery</div>
     <div>Romance</div>
     <div>Humor</div>
