--- a/templates/explore.html
+++ b/templates/explore.html
@@ -40,9 +40,9 @@
   <div class="grid-container">
     <div><a href="/fantasy">Fantasy</a></div>
     <div>Science Fiction</div>
-    <div><a href="/historical">Historical Fiction</a></div>
+    <div>Historical Fiction</div>
     <div>Crime/Mystery</div>
-    <div>Romance</div>
+    <div><a href="/contemporary">Contemporary</a></div>
     <div>Humor</div>
     <div>Fairytale</div>
     <div>Short Stories</div>
