--- a/templates/base.html
+++ b/templates/base.html
@@ -27,15 +27,19 @@
         </div>
     </nav>
 
-    <section class="fontcolor">
-        {% block body%}{% endblock %}
-    </section>
+    <main class="wrapper">
+        <section class="fontcolor">
+        {% block body%}
+        
+        
+
+        {% endblock %}
+        </section>
+        <div class="push"></div>
+    </main>
+    <p class="footer">© Robin Bath, Shiying Lin, Melissa Vuong</p>
+</body>
+
     
 
-    <div class="footer">
-        <p>© Robin Bath, Shiying Lin, Melissa Vuong</p>
-    </div>
-    
-    
-</body>
 </html>
