--- a/templates/community.html
+++ b/templates/community.html
@@ -4,5 +4,49 @@
 
 {% block body%}
 
+<div class="community">
+    <section>
+        <h2>What is the #1 book site that you absolutely recommend?</h2>
+        {% block commentlist %}  
+        <div>
+        {% for topic in topics %}
+            <p>
+                <b>@{{ topic.username }}:</b> {{ topic.comments }}
+            </p>
+        {% endfor %}
+        </div>
+        {% endblock %}
+        
+    </section>
+    {% block form %}
+    {% if status %}
+        <p>{{ status }}</p>
+    {% endif %}
+
+    <form method="post" action="/community" style="width: 100%" class="reviewform">
+        <p style="width: 100%">
+            <p>Username:</p>
+            <center><input type="text" name="username" style="width: 70%"></center>
+        </p>
+        <p style="width: 100%">
+            <p>Your thoughts:</p>
+            <center><textarea name="comments" placeholder="Enter your thoughts here..." style="width: 70%; height: 50px"></textarea></center>
+        </p>
+        <center><input type="submit" class="btn"></center>
+    </form>
+    {% endblock %}
+    
+    <section>
+        <h2></h2>
+        <div></div>
+    </section>
+    
+    <section>
+        <h2></h2>
+        <div></div>
+    </section>
+</div>
+
+
 
 {% endblock %}
