--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,7 +4,10 @@
 
 {% block body%}
 <div id = "signin">
+  
 <form action="/form_login" method="post">
+    
+
     <h2 ></h2>Username:<br>
     <input type="text" name='username'><br>
     Password:<br>
@@ -12,6 +15,9 @@
   <input type="submit" value="Login">
   </form>
   <h1 >{{info}}</h1>
-</div>
+
+
+    <img id="forest" src="{{url_for('static', filename='login asset.png')}}" width="100px" height="auto"/></div>
+
 
 {% endblock %}
